[gd_scene load_steps=7 format=2]

[ext_resource path="res://space/rocket.gd" type="Script" id=1]
[ext_resource path="res://art/rocket.png" type="Texture" id=2]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 0, 0.218019, 0.650879, 1, 1, 1, 1, 1 )

[sub_resource type="Curve" id=2]
min_value = -1.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CapsuleShape2D" id=3]

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="rocket" type="Area2D"]
position = Vector2( -5, 0 )
script = ExtResource( 1 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2( 0, 3 )
rotation = 1.5708
lifetime = 2.0
emission_shape = 2
emission_rect_extents = Vector2( 1, 1 )
gravity = Vector2( 0, 0 )
initial_velocity = 5.0
scale_amount = 1.6
scale_amount_random = 1.0
color_ramp = SubResource( 1 )
hue_variation_curve = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 0 )
scale = Vector2( 0.25, 0.28 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 4 )
[connection signal="area_entered" from="." to="." method="_on_rocket_area_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_rocket_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_rocket_mouse_exited"]
